Some more spacing fixes

--- a/app/assets/stylesheets/components/_typography.scss
+++ b/app/assets/stylesheets/components/_typography.scss
@@ -9,13 +9,23 @@ h1 {
   }
 }
 
+article h1 {
+  [class^="icon-"]:before,
+  [class*=" icon-"]:before {
+    padding-right: 5px;
+  }
+}
+
+article h1 {
+  margin-bottom: 20px;
+}
+
 p {
   margin-bottom: 1em;
 }
 
 h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6{
   font-weight: 100;
-  letter-spacing: 1px
 }
 
 
@@ -24,6 +34,7 @@ h1 small, h2 small, h3 small, h4 small, h5 small, h6 small {
   color: $blueDark;
   letter-spacing: 3px;
   font-style: oblique;
+  padding-left:5px;
 }
 
 .fix-text{
